# sirius-b

./: .gitattributes  .gitignore  Pipfile  Project.toml  README.md  pyproject.toml
data/processed/: sirius-b_cube.fits  sirius-b_pa.fits
notebooks/: adi.ipynb  detection_limits.ipynb  equillibrium_temp.jl  orbit_candidate.ipynb  photometry.ipynb  star_hoppers.jl
notebooks/epoch_2020feb04/: adi.ipynb  preprocessing.ipynb
notebooks/epoch_2020nov21/: preprocessing.ipynb
notebooks/epoch_2020nov28/: preprocessing.ipynb
paper/: aastex631.cls  adi_results.tex  adi_results_full.tex  paper.tex  references.bib
paper/figures/: contrast.jl  contrast_compare.jl  orbits.jl  pca_nmf_greeds.jl  psf.jl  reports.jl  residuals.jl  spike.jl
paper/sections/: adi_results.tex  adi_results_full.tex
src/: NIRC2_Preprocessing.py  SiriusB.jl  angles.jl  badpix.jl  fitting.jl  image_centroid_gaussian.py  paths.py  position.jl  tables.jl
src/mass_models/: __init__.py  read_model.py
