[tool.poetry]
name = "sirius-b"
version = "0.1.0"
description = ""
authors = ["Miles Lucas <mdlucas@hawaii.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20"
scipy = "^1.7"
astropy = "^4.2"
lacosmic = "^0.1.1"
matplotlib = "^3.4"
hciplot = "^0.1.8"
scikit-image = "^0.18"
opencv-python = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
